# expanse

./: NewPlan.md  PLAN.md  README.md  SOLARSYSTEMPLAN.md  main.py  pyproject.toml
data/: ai_profiles.toml
scripts/: gen_sounds.py
src/expanse/: app.py  clock.py  config.py
src/expanse/audio/: __init__.py  engine.py
src/expanse/input/: controller.py
src/expanse/render/: draw.py  panels.py  renderer.py  scope.py  theme.py
src/expanse/scenarios/: circular_orbit.py  first_contact.py  free_fall.py
src/expanse/sim/: ai.py  ai_profile.py  autopilot.py  bodies.py  celestial.py  damage.py  drive.py  events.py  guidance.py  integrator.py  orbit_math.py  sensors.py  tracks.py  vec.py  weapons.py  world.py
src/expanse/util/: ids.py  rng.py
tests/: test_ai.py  test_ai_profile.py  test_autopilot.py  test_celestial.py  test_clock.py  test_damage.py  test_guidance.py  test_integrator.py  test_orbit_math.py  test_scenario_smoke.py  test_sensors.py  test_tracks.py  test_vec.py  test_weapons.py
